# Sandbox

./: README.md
.github/workflows/: cmake_001.yml  cmake_002.yml  cmake_003.yml  python_001.yml  python_002.yml  python_split.yml
ci/python_002/: Dangerfile  Gemfile
projects/cmake/001/: CMakeLists.txt  README.md
projects/cmake/002/: CMakeLists.txt  README.md  main.c
projects/cmake/002/LibA/: CMakeLists.txt
projects/cmake/002/LibA/include/: liba.h
projects/cmake/002/LibA/source/: liba.c
projects/cmake/003/: CMakeLists.txt  README.md  main.c
projects/cmake/003/LibA/: CMakeLists.txt  liba.c  liba.h
projects/cmake/003/LibA/CompAdd/: CMakeLists.txt
projects/cmake/003/LibA/CompSub/: CMakeLists.txt  sub.h
projects/python/001/: README.md  main.py
projects/python/002/: .gitignore  README.md
projects/python/002/source/: main.py
projects/python/002/test/: test_main.py
python/split/: main.py
work/: sha.txt
